@@ -1,3 +1,9 @@
+2006-09-14  Alan Modra  <amodra@bigpond.net.au>
+
+	PR 3182
+	* elf.c (_bfd_elf_copy_private_header_data): Fix group members
+	that have had their SHT_GROUP section removed.
+
 2006-09-12  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/3197
